--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   ],
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "connected-react-router": "^4.5.0",
+    "history": "^4.7.2",
     "react": "^16.6.0",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.0",
@@ -40,6 +42,7 @@
   },
   "devDependencies": {
     "@types/bootstrap": "^3.3.7",
+    "@types/history": "^4.7.2",
     "@types/jest": "^23.3.9",
     "@types/node": "^10.12.2",
     "@types/react": "^16.4.18",
@@ -49,6 +52,7 @@
     "@types/react-router": "^4.3.1",
     "@types/react-router-bootstrap": "^0.24.4",
     "@types/react-router-dom": "^4.3.1",
+    "@types/react-router-redux": "^4.0.8",
     "typescript": "^3.1.5"
   }
 }
