--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "3.1.0",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -53,6 +54,8 @@
     "@types/react-router-bootstrap": "^0.24.4",
     "@types/react-router-dom": "^4.3.1",
     "@types/react-router-redux": "^4.0.8",
+    "@types/redux-logger": "^3.0.6",
+    "redux-logger": "^3.0.6",
     "typescript": "^3.1.5"
   }
 }
