--- a/package.json
+++ b/package.json
@@ -21,17 +21,19 @@
     "graphql-playground"
   ],
   "dependencies": {
-    "bootstrap": "^3.3.7",
+    "@material-ui/icons": "^3.0.1",
+    "bootstrap": "^4.1.3",
     "connected-react-router": "^4.5.0",
     "history": "^4.7.2",
+    "jquery": "1.9.1 - 3",
+    "popper.js": "^1.14.3",
     "react": "^16.6.0",
-    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.0",
     "react-redux": "^5.1.0",
     "react-router": "^4.3.1",
-    "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "3.1.0",
+    "reactstrap": "^6.5.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
@@ -42,18 +44,18 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
-    "@types/bootstrap": "^3.3.7",
+    "@material-ui/core": "^3.0.0",
+    "@types/bootstrap": "^4.1.2",
     "@types/history": "^4.7.2",
     "@types/jest": "^23.3.9",
+    "@types/jquery": "1.9.1 - 3",
     "@types/node": "^10.12.2",
     "@types/react": "^16.4.18",
-    "@types/react-bootstrap": "^0.32.4",
     "@types/react-dom": "^16.0.9",
     "@types/react-redux": "^5.0.21",
     "@types/react-router": "^4.3.1",
-    "@types/react-router-bootstrap": "^0.24.4",
     "@types/react-router-dom": "^4.3.1",
-    "@types/react-router-redux": "^4.0.8",
+    "@types/reactstrap": "^6.4.2",
     "@types/redux-logger": "^3.0.6",
     "redux-logger": "^3.0.6",
     "typescript": "^3.1.5"
