--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@material-ui/icons": "^3.0.1",
     "bootstrap": "^4.1.3",
     "connected-react-router": "^4.5.0",
+    "flux-standard-action": "^2.0.3",
     "history": "^4.7.2",
     "jquery": "1.9.1 - 3",
     "popper.js": "^1.14.3",
