--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "react-scripts-ts start",
+    "start": "cross-env BROWSER=none react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject"
@@ -58,6 +58,7 @@
     "@types/react-router-dom": "^4.3.1",
     "@types/reactstrap": "^6.4.2",
     "@types/redux-logger": "^3.0.6",
+    "cross-env": "^5.2.0",
     "redux-logger": "^3.0.6",
     "typescript": "^3.1.5"
   }
