--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "start": "cross-env BROWSER=none react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "eject": "react-scripts-ts eject",
+    "lint": "tslint --project tsconfig.json --config tslint.json"
   },
   "devDependencies": {
     "@types/bootstrap": "^4.1.2",
@@ -60,6 +61,7 @@
     "@types/redux-logger": "^3.0.6",
     "cross-env": "^5.2.0",
     "redux-logger": "^3.0.6",
+    "tslint": "^5.11.0",
     "typescript": "^3.1.5"
   }
 }
