--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,14 +1,13 @@
+name: build-$(Build.BuildId)-date-$(Date:yyyy-MM-dd)
 resources:
 - repo: self
-queue:
-  name: Hosted VS2017
 steps:
 - task: geeklearningio.gl-vsts-tasks-yarn.yarn-installer-task.YarnInstaller@2
   displayName: 'Use Yarn 1.x'
   inputs:
     checkLatest: true
 - task: geeklearningio.gl-vsts-tasks-yarn.yarn-task.Yarn@2
-  displayName: yarn
+  displayName: yarn install
   inputs:
     ProductionMode: true
 - task: geeklearningio.gl-vsts-tasks-yarn.yarn-task.Yarn@2
